Multitab support added, overhauled the way the rooms work, rooms under development.

--- a/template/chat.jade
+++ b/template/chat.jade
@@ -5,6 +5,11 @@ block content
 		b Rooms
 		#rooms
 	br
+	div#user-wrapper
+		b Users
+		#users
+	input#testbutton(type='button', value='Call test function')
+	br
 	#namewrapper
 		b Your name: 
 			input#name(type='text', value='Anonymous')
