--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 #content {
-	width: 500px;
+	width: 100%;
 	height: 300px;
 	margin: 0 0 20px 0;
 	border: solid 0px #999;
@@ -9,16 +9,36 @@
 #chatwrapper {
 	border: solid 1px #999;
 	display: inline-block;
-	clear: both;
 	text-align: center;
+	width: 500px;
+	box-shadow: 0px 0px 20px 5px rgba(200, 200, 200, 0.5);
+	margin: 20px 10px 10px 10px;
+
 }
 
-#namewrapper {
-	clear: both;
+#userwrapper {
+	margin: 10px 10px 10px 10px;
+	display: inline-block;
+	text-align: left;
+	height: 300px;
+
+}
+
+#mainwrapper {
+	text-align: left;
+
+}
+
+#namewrapper b {
+	
 }
 
 body * {
 	font-family: source sans pro;
+}
+
+body b {
+	/*add color to the bold ones!*/
 }
 
 input.field {
@@ -51,7 +71,9 @@ div.serverChatRow {
 
 div.bubble {
 	display: inline-block;
-	clear: both;
+	word-wrap: break-word;
+
+	max-width: 90%;
 	padding: 5px 5px 5px 5px;
 	margin: 5px 5px 5px 5px;
 	border-radius: 10px;
@@ -69,4 +91,12 @@ div.chatBubble {
 
 div.serverBubble {
 	background-color: rgba(200, 200, 200, 0.3);
+}
+
+
+
+@media only screen and (max-width: 500px) {
+	#chatwrapper {
+		width: 95%;
+	}
 }
