--- a/template/layout.jade
+++ b/template/layout.jade
@@ -6,6 +6,7 @@ html
 		script(src='/socket.io/socket.io.js')
 		script(src='https://code.jquery.com/jquery-2.1.4.min.js')
 		link(href='/css/style.css' rel='stylesheet' type='text/css')
+		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 
 	body
 		block content
